styles.css
/* ... */
body:not(.is-mobile)
    .sr-card-container:not(.sr-custom-hotkeys)
    .sr-response-button.sr-show-answer-button::after {
    content: "Space";
}
body:not(.is-mobile)
    .sr-card-container:not(.sr-custom-hotkeys)
    .sr-response-button.sr-again-button::after {
    content: "0";
}
body:not(.is-mobile)
    .sr-card-container:not(.sr-custom-hotkeys)
    .sr-response-button.sr-hard-button::after {
    content: "1";
}
body:not(.is-mobile)
    .sr-card-container:not(.sr-custom-hotkeys)
    .sr-response-button.sr-good-button::after {
    content: "2";
}
body:not(.is-mobile)
    .sr-card-container:not(.sr-custom-hotkeys)
    .sr-response-button.sr-easy-button::after {
    content: "3";
}

/* src/ui/obsidian-ui-components/content-container/card-container/toolbar/toolbar.css */
.sr-card-toolbar {
    --deck-info-name-width: 20ch;
    --tool-button-section-width: 218px;
    height: 46px;
    display: flex;
    gap: var(--size-4-2);
    justify-content: space-between;
    align-items: center;
    padding: 0 var(--size-4-2);
    border-bottom: 1px solid var(--background-modifier-border);
    & > * {
        margin: var(--size-4-2) 0;
    }
    & > .sr-divider {
        --divider-height: 100%;
        --divider-color: var(--background-modifier-border);
        --divider-width: 1px;
        margin: 0;
    }
    & .sr-extended-menu-button {
        display: none;
    }
    & .sr-reset-button.mod-warning {
        --interactive-warning-hover: #fdf6f6;
        color: var(--text-error);
        background-color: var(--interactive-normal);
        &:hover {
            background-color: var(--interactive-warning-hover);
        }
    }
}
.sr-card-toolbar .sr-flex-spacer.sr-center-spacer {
    display: none;
}
.sr-tab-view .sr-card-toolbar {
    border-top: 1px solid var(--background-modifier-border);
}
.is-mobile .sr-card-toolbar {
    height: auto;
}
.is-phone .sr-tab-view .sr-card-toolbar {
    --deck-info-name-width: 15ch;
}
.is-phone #sr-modal-view .sr-card-toolbar {
    --deck-info-name-width: 10ch;
}
@media only screen and (orientation: landscape) {
    .is-phone .sr-card-toolbar {
        display: none;
    }
}
.is-phone .sr-card-toolbar .sr-edit-button,
.is-phone .sr-card-toolbar .sr-reset-button,
.is-phone .sr-card-toolbar .sr-short-menu-button,
.is-phone .sr-card-toolbar > .sr-divider,
.is-phone .sr-card-toolbar .sr-skip-button {
    display: none;
}
.is-phone .sr-card-toolbar .sr-extended-menu-button {
    display: flex;
}
.is-phone .sr-card-toolbar .sr-current-deck-info,
.is-phone .sr-card-toolbar .sr-deck-pointer {
    display: none;
}
.is-phone .sr-card-toolbar .sr-flex-spacer.sr-center-spacer {
    display: flex;
}
@container (width < 730px) {
    .sr-card-toolbar {
        --deck-info-name-width: 15ch;
    }
}
@container (width < 690px) {
    .sr-card-toolbar {
        --deck-info-name-width: 20ch;
    }
    .sr-card-toolbar .sr-edit-button,
    .sr-card-toolbar .sr-reset-button,
    .sr-card-toolbar .sr-short-menu-button,
    .sr-card-toolbar > .sr-divider,
    .sr-card-toolbar .sr-skip-button {
        display: none;
    }
    .sr-card-toolbar .sr-extended-menu-button {
        display: flex;
    }
    .sr-card-toolbar .sr-flex-spacer.sr-center-spacer {
        display: flex;
    }
}
@container (width < 580px) {
    .sr-card-toolbar .sr-current-deck-info,
    .sr-card-toolbar .sr-deck-pointer {
        display: none;
    }
}

/* src/ui/obsidian-ui-components/content-container/card-container/toolbar/deck-info/deck-info.css */
.sr-info-section {
    display: flex;
    gap: var(--size-4-2);
    color: var(--text-muted);
    text-wrap: nowrap;
    font-weight: bold;
}
.sr-deck-info {
    display: flex;
    gap: var(--size-4-3);
    justify-content: center;
    align-items: center;
    flex-wrap: nowrap;
    color: white;
    padding: 0 var(--size-4-2);
    border-radius: var(--input-radius);
    & .sr-divider {
        border-color: white;
    }
}
.sr-counter-wrapper {
    display: flex;
    justify-content: center;
    align-items: center;
    gap: var(--size-4-1);
}
.sr-deck-name {
    max-width: var(--deck-info-name-width);
    overflow: hidden;
    text-overflow: ellipsis;
}
.sr-deck-pointer,
.sr-counter-icon {
    display: flex;
    justify-content: center;
    align-items: center;
    & svg {
        --icon-size: 16px;
        --icon-stroke: 2.5px;
    }
}

/* src/ui/obsidian-ui-components/content-container/deck-container/deck-container.css */
.deck-container {
    gap: 0px;
}

/* src/ui/obsidian-ui-components/content-container/deck-container/deck-list.css */
.sr-deck-container {
    .sr-scroll-wrapper {
        height: 100px;
        overflow: hidden;
        flex-grow: 1;
        display: flex;
        flex-direction: column;
        & .sr-content {
            overflow-x: hidden;
            overflow-y: auto;
            flex-grow: 1;
            padding: var(--size-4-2);
            padding-right: var(--size-4-1);
            padding-top: var(--size-4-4);
        }
    }
    & .sr-tree-item-row {
        padding-top: 2px;
        padding-bottom: 2px;
        margin-bottom: 0;
        &.is-disabled {
            cursor: not-allowed;
            opacity: 0.6;
        }
    }
    & .sr-tree-stats-container {
        display: flex;
        gap: var(--size-4-1);
    }
    & .sr-tree-stats-count {
        display: flex;
        justify-content: center;
        align-items: center;
        min-width: calc(32px + var(--size-2-1) * 2);
        padding: var(--size-4-1) var(--size-2-1);
        text-align: center;
    }
    & .sr-tree-stats-count:not(.sr-fg-green, .sr-fg-blue, .sr-fg-red, .sr-fg-yellow) {
        color: #ffffff !important;
    }
}
.sr-header-row .sr-tree-row-text,
.sr-header-row .sr-tree-stats-count {
    font-weight: bold;
    font-size: small;
}
.sr-header-row {
    & .tree-item-self {
        border-bottom: 1px dashed var(--background-modifier-border);
        border-radius: 0;
        margin-bottom: var(--size-4-1);
    }
}
/* ... */

